--- a/Earth_Defenders/Earth_Defenders/Debug/Makefile
+++ b/Earth_Defenders/Earth_Defenders/Debug/Makefile
@@ -43,6 +43,9 @@ C_SRCS +=  \
 ../Display/Serial.c \
 ../Display/SPI.c \
 ../Display/Touch.c \
+../Game/game.cpp \
+../Game/player.cpp \
+../Game/textWriter.cpp \
 ../main.cpp
 
 
@@ -57,6 +60,9 @@ Display/displayFunc.o \
 Display/Serial.o \
 Display/SPI.o \
 Display/Touch.o \
+Game/game.o \
+Game/player.o \
+Game/textWriter.o \
 main.o
 
 OBJS_AS_ARGS +=  \
@@ -64,6 +70,9 @@ Display/displayFunc.o \
 Display/Serial.o \
 Display/SPI.o \
 Display/Touch.o \
+Game/game.o \
+Game/player.o \
+Game/textWriter.o \
 main.o
 
 C_DEPS +=  \
@@ -71,6 +80,9 @@ Display/displayFunc.d \
 Display/Serial.d \
 Display/SPI.d \
 Display/Touch.d \
+Game/game.d \
+Game/player.d \
+Game/textWriter.d \
 main.d
 
 C_DEPS_AS_ARGS +=  \
@@ -78,6 +90,9 @@ Display/displayFunc.d \
 Display/Serial.d \
 Display/SPI.d \
 Display/Touch.d \
+Game/game.d \
+Game/player.d \
+Game/textWriter.d \
 main.d
 
 OUTPUT_FILE_PATH +=Earth_Defenders.elf
@@ -119,6 +134,27 @@ Display/Touch.o: ../Display/Touch.c
 	@echo Building file: $<
 	@echo Invoking: AVR8/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\include"  -O1 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+Game/game.o: ../Game/game.cpp
+	@echo Building file: $<
+	@echo Invoking: AVR8/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-g++.exe$(QUOTE) -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\include"  -O1 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\gcc\dev\atmega328p" -c -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+Game/player.o: ../Game/player.cpp
+	@echo Building file: $<
+	@echo Invoking: AVR8/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-g++.exe$(QUOTE) -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\include"  -O1 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\gcc\dev\atmega328p" -c -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+Game/textWriter.o: ../Game/textWriter.cpp
+	@echo Building file: $<
+	@echo Invoking: AVR8/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-g++.exe$(QUOTE) -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\include"  -O1 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\gcc\dev\atmega328p" -c -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
 	@echo Finished building: $<
 	
 
